# LifeLongSlamBackend

./: CMakeLists.txt  package.xml
app/: CMakeLists.txt  ros_wrapper.cpp
app/ros1/: CMakeLists.txt
app/ros1/include/: ros_utils.hpp
app/ros1/launch/: backend.launch  backend_rviz.launch  rviz.launch
app/ros1/msg/: keyframe_info.msg  trajectory_info.msg  workspace_info.msg
app/ros1/src/: ros_wrapper.cpp
app/ros1/srv/: SetCommand.srv
app/ros2/: CMakeLists.txt
app/ros2/msg/: control_info.msg
app/ros2/src/: ros_wrapper.cpp  test2_sub.cpp  test_pub.cpp  test_sub.cpp
config/: param.yaml
docker/: dockerfile
include/: ros_utils.hpp
launch/: backend.launch  backend_rviz.launch  rviz.launch
lib/lifelong_backend/: CMakeLists.txt
lib/lifelong_backend/include/lifelong_backend/: backend_base.hpp  backend_lifelong.h  backend_lifelong_impl.hpp  graph.hpp  pose_graph_database.hpp
lib/lifelong_backend/include/lifelong_backend/Common/: keyframe.hpp
lib/lifelong_backend/include/lifelong_backend/GraphOptimization/: graph_optimization.h  graph_optimization_g2o.h  graph_optimization_gtsam.h
lib/lifelong_backend/include/lifelong_backend/LoopDetection/: SceneRecognitionScanContext.hpp  loopDetection.hpp
lib/lifelong_backend/include/lifelong_backend/LoopDetection/GlobalDescriptor/scanContext/: Scancontext.hpp  nanoflann.hpp
lib/lifelong_backend/proto/: graph.pb.cc  graph.pb.h  graph.proto  sc.pb.cc  sc.pb.h  transform.pb.h  transform.proto
lib/lifelong_backend/src/: backend_lifelong.cpp
lib/lifelong_backend/src/GraphOptimization/: graph_optimization_g2o.cpp  graph_optimization_gtsam.cpp
lifelong_backend/: CMakeLists.txt
lifelong_backend/CMakeModules/: FindG2O.cmake
lifelong_backend/include/lifelong_backend/: backend_base.hpp  backend_lifelong.h  backend_lifelong_impl.hpp  graph.hpp  pose_graph_database.hpp
lifelong_backend/include/lifelong_backend/Common/: keyframe.hpp
lifelong_backend/include/lifelong_backend/GraphOptimization/: graph_optimization.h  graph_optimization_g2o.h  graph_optimization_gtsam.h
lifelong_backend/include/lifelong_backend/InnerComm/: InnerProcessComm.hpp  TypeJudge.hpp
lifelong_backend/include/lifelong_backend/LoopDetection/: SceneRecognitionScanContext.hpp  loopDetection.hpp
lifelong_backend/include/lifelong_backend/LoopDetection/GlobalDescriptor/scanContext/: KDTreeVectorOfVectorsAdaptor.h
lifelong_backend/proto/: graph.pb.cc  graph.pb.h  sc.pb.cc  sc.pb.h  sc.proto  transform.pb.cc  transform.pb.h
lifelong_backend/src/GraphOptimization/: graph_optimization_g2o.cpp  graph_optimization_gtsam.cpp
msg/: space_info.msg
rviz/: system.rviz
src/: ros_wrapper.cpp
srv/: SaveTraj.srv  SetSpace.srv  SetTraj.srv
