<?xml version="1.0"?>
<package format="3">
  <name>lifelong_backend</name>
  <version>0.0.0</version>
  <description> lifelong backend package </description>

  <maintainer email="wiwlwh@163.com">koide</maintainer>

  <license>BSD</license>

  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake_auto</buildtool_depend>
  
  <build_depend condition="$ROS_VERSION == 2">rclcpp</build_depend>
  <build_depend condition="$ROS_VERSION == 2">rosidl_default_generators</build_depend>
  <build_depend> slam_lib_3d </build_depend>
  <member_of_group condition="$ROS_VERSION == 2">rosidl_interface_packages</member_of_group>

  <export>
    <build_type condition="$ROS_VERSION == 1">catkin</build_type>
    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
  </export>
  <exec_depend condition="$ROS_VERSION == 2">rosidl_default_runtime</exec_depend>
</package>

