if( BUILD_WITH_CHANNEL_AUTO STREQUAL "ON")
    if(DEFINED ENV{ROS_VERSION} AND "$ENV{ROS_VERSION}" STREQUAL "1")
        # message(FATAL_ERROR "Auto USE ROS1 channel")
        message("Auto USE ROS1 channel")
        add_subdirectory(ros1)
    elseif(DEFINED ENV{ROS_VERSION} AND "$ENV{ROS_VERSION}" STREQUAL "2")
        # message(FATAL_ERROR "Auto USE ROS2 channel")
        message("Auto USE ROS2 channel")
        add_subdirectory(ros2)
    else()
        message("Auto Use protobuf channel")
        add_subdirectory(protobuf)
    endif()
elseif(BUILD_WITH_CHANNEL_ROS2 STREQUAL "ON")
    message("Manual USE ROS2 channel")
    add_subdirectory(ros2)
elseif(BUILD_WITH_CHANNEL_ROS1 STREQUAL "ON")
    message("Manual USE ROS1 channel")
    add_subdirectory(ros1)
elseif(BUILD_WITH_CHANNEL_PROTOBUF STREQUAL "ON")
    message("Manual USE protobuf channel")
    add_subdirectory(protobuf)
endif()